<resources>

    <string name="app_name">Set Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_gameplay">Gameplay</string>
    <string name="new_game">New Game</string>
    <string name="load_save">Load/Save</string>
    <string name="hint">Hint</string>
    <string name="show">Show</string>
    <string name="add_cards">Add Cards</string>
    <string name="title_activity_set_preferences">SetPreferences</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="game_over">Game Over</string>

</resources>